Main view html and styles; dinnerModel as an es6 class

--- a/main.html
+++ b/main.html
@@ -11,26 +11,48 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<!-- Styles -->
 	<link rel="stylesheet" href="./styles/commons.css" />
-	<link rel="stylesheet" href="./styles/home.css" />
+	<link rel="stylesheet" href="./styles/main.css" />
 
 </head>
 
 <body>
-	<div id="container" class="dp-container">
+	<div class="dp-container">
 		<div class="dp-header">
 			<h1 class="dp-header__title">Dinner planner</h1>
 		</div>
 
 		<div class="dp-content">
-			<div class="dp-home">
-				<div class="dp-home__body">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-					magna
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.
+			<div class="dp-main">
+				<div class="dp-main__sidebar">
+					<div class="dp-sidebar">
+						<div class="dp-sidebar__header">
+							My Dinner
+						</div>
+						<div class="dp-sidebar__people">
+							People
+						</div>
+						<div class="dp-sidebar__sub-header">
+							Dish Name - Cost
+						</div>
+						<div class="dp-sidebar__total">
+							Total
+						</div>
+						<div class="dp-sidebar__confirm">
+							<a href="/review"><button id="confirmDinnerBtn" class="btn dp-btn--primary">Confirm Dinner</button></a>
+						</div>
+					</div>
 				</div>
-				<div>
-					<a href="main.html"><button id="createNewDinner" class="btn dp-btn--primary">Create new dinner</button></a>
+				<div class="dp-main__content">
+					<div class="dp-select">
+						Select
+						<div>
+							<!-- ${this.model.getAllDishes().map((dish) => (
+							// this are the DinnerItems, clicking on one should load the its details
+							/*template*/`
+							<div>${dish.name}</div>
+							`)).join('')} -->
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
