--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dinner planner</title>
+	<title>Dinner Planner</title>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body class="dp-body">
 	<div id="container" class="dp-container">
 		<div class="dp-header">
 			<h1 class="dp-header__title">Dinner planner</h1>
