--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="dp-body">
 	<div id="container" class="dp-container">
 		<div class="dp-header">
-			<h1 class="dp-header__title">Dinner planner</h1>
+			<h1 class="dp-header__title">Dinner Planner</h1>
 		</div>
 
 		<div class="dp-content">
