Details mobile view

--- a/another.html
+++ b/another.html
@@ -69,7 +69,7 @@
 								SEK 77.20
 							</div>
 							<div class="dp-sidebar__confirm">
-								<a href="/review"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
+								<a href="/overview.html"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
 							</div>
 						</div>
 
@@ -81,7 +81,7 @@
 						<h1 class="dp-main__search-title">
 							ADD ANOTHER ONE
 						</h1>
-						<form class="dp-main__search-form">
+						<form class="dp-main__search-form" onsubmit="return false;">
 							<div class="form-group">
 								<input type="text" class="form-control" placeholder="Enter key words" />
 							</div>
