--- a/details.html
+++ b/details.html
@@ -7,10 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dinner planner</title>
 
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+	 crossorigin="anonymous">
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<!-- Styles -->
 	<link rel="stylesheet" href="./styles/commons.css" />
+	<link rel="stylesheet" href="./styles/sidebar.css" />
 	<link rel="stylesheet" href="./styles/details.css" />
 
 
@@ -27,180 +32,206 @@
 				<div class="dp-details__sidebar">
 					<div class="dp-sidebar">
 						<div class="dp-sidebar__header">
-							My Dinner
+							<h2 class="dp-sidebar__title">
+								My Dinner
+							</h2>
+							<div class="dp-sm-only">
+								<button class="navbar-toggler" type="button">
+									<i class="fas fa-bars"></i>
+								</button>
+							</div>
 						</div>
-						<div class="dp-sidebar__people">
-							People
-						</div>
-						<div class="dp-sidebar__sub-header">
-							Dish Name - Cost
-						</div>
-						<div class="dp-sidebar__total">
-							Total
-						</div>
-						<div class="dp-sidebar__confirm">
-							<a href="/review"><button id="confirmDinnerBtn" class="btn dp-btn--primary">Confirm Dinner</button></a>
+						<div class="dp-sidebar__collapsible dp-lg-only">
+							<div class="dp-sidebar__people">
+								<h3 class="dp-sidebar__people-title">
+									People
+								</h3>
+								<div>
+									<input type="number" class="form-control w-50" />
+								</div>
+							</div>
+							<div class="dp-sidebar__sub-header">
+								<p>
+									Dish name
+								</p>
+								<p>
+									Cost
+								</p>
+							</div>
+							<div class="dp-sidebar__total">
+								SEK 0.00
+							</div>
+							<div class="dp-sidebar__confirm">
+								<a href="/overview.html"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="dp-details__content">
-						<div class="dp-flex">
-							<div class="dp-flex-i">
-								<div class="dp-details__dishName">
-									<h3>Lasagne</h3>
-								</div>
-								<div class="dp-details__dishImage">
-									<img src ="./images/lasagne-sideshot-1-lowres.jpg"  width="75%" height="75%"/>
-								</div>
-								<div class="dp-details__description">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-								</div>
-								<div class="dp-details__backBtn">
-										<a href="/review"><button id="backToSearchBtn" class="btn dp-btn--primary">Back to Search</button></a>
-								</div>
+					<div class="dp-flex dp-flex-sm-col">
+						<div class="dp-flex-i">
+							<div class="dp-details__dishName">
+								<h3>LASAGNE</h3>
 							</div>
-							<div class="dp-flex-i">
-								<div class="dp-details__ingredientsTable">
-									<div class="dp-details__ingredientsTitle">
-										<h5>INGREDIENTS FOR 3 PEOPLE</h5>
-									</div>
-									<div class="dp-details__ingredientsContent">
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>2 tbsp</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>olive oil</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>0.20</p>
-												</div>
+							<div class="dp-details__dishImage">
+								<img src="./images/lasagne-sideshot-1-lowres.jpg" width="75%" height="75%" />
+							</div>
+							<div class="dp-details__description">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+									commodo consequat.</p>
+							</div>
+							<div class="dp-details__backBtn">
+								<a href="/main.html"><button id="backToSearchBtn" class="btn dp-btn--primary">Back to Search</button></a>
+							</div>
+						</div>
+						<div class="dp-flex-i">
+							<div class="dp-details__ingredientsTable">
+								<div class="dp-details__ingredientsTitle">
+									<h5>INGREDIENTS FOR 3 PEOPLE</h5>
+								</div>
+								<div class="dp-details__ingredientsContent">
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>2 tbsp</p>
 										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>750 g</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>lean beef mince</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>10.00</p>
-												</div>
+										<div class="dp-details__ingredientsName">
+											<p>olive oil</p>
 										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>90 g</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>pack rosciutto</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>15.00</p>
-												</div>
-										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>100 ml</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>tomato sauce</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>10.00</p>
-												</div>
-										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>200 ml</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>hot beef stock</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>20.00</p>
-												</div>
-										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>300 g</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>fresh pack lasagne sheets</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>5.00</p>
-												</div>
-										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>125 g</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>ball mozzarella</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>12.00</p>
-												</div>
-										</div>
-										<div class="dp-details__ingredientsLine">
-												<div class="dp-details__ingredientsQnty">
-													<p>100 ml</p>
-												</div>
-												<div class="dp-details__ingredientsName">
-													<p>white sauce</p>
-												</div>
-												<div class="dp-details__ingredientsCurr">
-													<p>SEK</p>
-												</div>
-												<div class="dp-details__ingredientsPrice">
-													<p>5.00</p>
-												</div>
-										</div>
-									</div>
-									<div class="dp-details__tableFooter">
-										<div class="dp-details__addToMenu">
-											<a href="/review"><button id="backToSearchBtn" class="btn dp-btn--primary">Add to Menu</button></a>
-										</div>
-										<div class="dp-details__ingredientsTotalCurr">
+										<div class="dp-details__ingredientsCurr">
 											<p>SEK</p>
 										</div>
-										<div class="dp-details__ingredientsTotal">
-											<p>77.20</p>
+										<div class="dp-details__ingredientsPrice">
+											<p>0.20</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>750 g</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>lean beef mince</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>10.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>90 g</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>pack rosciutto</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>15.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>100 ml</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>tomato sauce</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>10.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>200 ml</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>hot beef stock</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>20.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>300 g</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>fresh pack lasagne sheets</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>5.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>125 g</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>ball mozzarella</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>12.00</p>
+										</div>
+									</div>
+									<div class="dp-details__ingredientsLine">
+										<div class="dp-details__ingredientsQnty">
+											<p>100 ml</p>
+										</div>
+										<div class="dp-details__ingredientsName">
+											<p>white sauce</p>
+										</div>
+										<div class="dp-details__ingredientsCurr">
+											<p>SEK</p>
+										</div>
+										<div class="dp-details__ingredientsPrice">
+											<p>5.00</p>
 										</div>
 									</div>
 								</div>
-							</div>	
-						</div>
-						<div class="dp-flex">
-							<div class="dp-details__preparation">
-								<h3>Preparation</h3>
+								<div class="dp-details__tableFooter">
+									<div class="dp-details__addToMenu">
+										<a href="/review"><button id="backToSearchBtn" class="btn dp-btn--primary">Add to Menu</button></a>
+									</div>
+									<div class="dp-details__ingredientsTotalCurr">
+										<p>SEK</p>
+									</div>
+									<div class="dp-details__ingredientsTotal">
+										<p>77.20</p>
+									</div>
+								</div>
 							</div>
 						</div>
+					</div>
+					<div class="dp-flex dp-flex-col">
+						<div class="dp-details__dishName">
+							<h3>PREPARATION</h3>
 						</div>
+						<div class="dp-details__description pt-0">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+									commodo consequat.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<!-- jQuery -->
