--- a/overview.html
+++ b/overview.html
@@ -26,10 +26,10 @@
 				<div class="dp-overview__top-bar">
 					<h3 class="dp-overview__guests" id="numberOfGuests"></h3>
 					<div class="dp-lg-only">
-						<button class="btn dp-btn--primary dp-overview__back-btn">Go back and edit dinner</button>
+						<a href="javascript:history.back()"><button class="btn dp-btn--primary dp-overview__back-btn">Go back and edit dinner</button></a>
 					</div>
 					<div class="dp-sm-only">
-						<button class="btn dp-btn--primary dp-overview__back-btn">Back</button>
+						<a href="javascript:history.back()"><button class="btn dp-btn--primary dp-overview__back-btn">Back</button></a>
 					</div>
 				</div>
 				<div class="dp-overview__content">
