--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 									People
 								</h3>
 								<div>
-									<input type="number" class="form-control w-50" />
+									<input id="guestsInput" type="number" class="form-control w-50" />
 								</div>
 							</div>
 							<div class="dp-sidebar__sub-header">
