--- a/myDinner.html
+++ b/myDinner.html
@@ -13,14 +13,12 @@
 	<link rel="stylesheet" href="./styles/commons.css" />
     <link rel="stylesheet" href="./styles/details.css" />
     <link rel="stylesheet" href="./styles/myDinner.css" />
-
-
 </head>
 
 <body>
-	<div class="dp-container">
+	<div id="container" class="dp-container">
 		<div class="dp-header">
-			<h1 class="dp-header__title">Dinner planner</h1>
+			<h1 class="dp-header__title">Dinner Planner</h1>
 		</div>
 		<div class="dp-content">
 			<div class="dp-myDinner dp-flex-col">
@@ -45,7 +43,7 @@
                 </div>
                 <div class="dp-flex dp-flex-row">
                     <div class="dp-myDinner__image">
-    
+
                     </div>
                     <div class="dp-myDinner__dinnerDetails">
                         <div class="dp-details__dishName">
@@ -57,12 +55,12 @@
                     </div>
                     <div class="dp-myDinner__dinnerDiscription">
                         <div><h4>Preparation</h4></div>
-                        
+
                         <div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                     </div>
-                </div>    
+                </div>
 			</div>
 		</div>
 	</div>
