--- a/another.html
+++ b/another.html
@@ -46,7 +46,7 @@
 									People
 								</h3>
 								<div>
-									<input type="number" class="form-control w-50" />
+									<input id="guestsInput" type="number" class="form-control w-50" />
 								</div>
 							</div>
 							<div class="dp-sidebar__sub-header">
