--- a/details.html
+++ b/details.html
@@ -17,14 +17,12 @@
 	<link rel="stylesheet" href="./styles/commons.css" />
 	<link rel="stylesheet" href="./styles/sidebar.css" />
 	<link rel="stylesheet" href="./styles/details.css" />
-
-
 </head>
 
 <body>
-	<div class="dp-container">
+	<div id="container" class="dp-container">
 		<div class="dp-header">
-			<h1 class="dp-header__title">Dinner planner</h1>
+			<h1 class="dp-header__title">Dinner Planner</h1>
 		</div>
 
 		<div class="dp-content">
@@ -47,7 +45,7 @@
 									People
 								</h3>
 								<div>
-									<input type="number" class="form-control w-50" />
+									<input id="guestsInput" type="number" class="form-control w-50" />
 								</div>
 							</div>
 							<div class="dp-sidebar__sub-header">
