Added myDinner mobile view

--- a/myDinner.html
+++ b/myDinner.html
@@ -37,24 +37,18 @@
                         <img src="images/lasagne-sideshot-1-lowres.jpg" class="dp-myDinner__image"/>
                     </div>
                     <div class="dp-myDinner__dinnerDetails">
-                        <div class="dp-myDinner__dishName">
-                            <h3>Lasagne</h3>
-                        </div>
-                        <div class="dp-myDinner__dishDetails">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                   commodo consequat.</p>
-                        </div>
+                        <h3>Lasagne</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                                    commodo consequat. </p>
                     </div>
                     <div class="dp-myDinner__dinnerDiscription">
-                        <div class="dp-myDinner__dinnerDiscription">
-                            <h4>Preparation</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h4>Preparation</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                                   veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                    commodo consequat. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                        </div>
                     </div>
                 </div>
                 <div class="dp-myDinner__line">
@@ -62,7 +56,12 @@
                         <img src="images/lasagne-sideshot-1-lowres.jpg" class="dp-myDinner__image"/>
                     </div>
                     <div class="dp-myDinner__dinnerDetails">
-                        <div class="dp-myDinner__dishName">
+                        <h3>Lasagne</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                                commodo consequat. </p>
+                        <!-- <div class="dp-myDinner__dishName">
                             <h3>Lasagne</h3>
                         </div>
                         <div class="dp-myDinner__dishDetails">
@@ -70,16 +69,14 @@
                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
                                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
                                 commodo consequat. </p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="dp-myDinner__dinnerDiscription">
-                        <div class="dp-myDinner__dinnerDiscription">
-                            <h4>Preparation</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                  commodo consequat.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                        </div>
+                        <h4>Preparation</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                   commodo consequat. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                     </div>
                 </div>
 			</div>
