--- a/overview.html
+++ b/overview.html
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 				<div class="dp-overview__print">
-					<button class="btn dp-btn--primary dp-overview__print-btn">Print Full Recipe</button>
+					<a href="./printout.html"><button class="btn dp-btn--primary dp-overview__print-btn">Print Full Recipe</button></a>
 				</div>
 			</div>
 		</div>
