--- a/myDinner.html
+++ b/myDinner.html
@@ -18,18 +18,18 @@
 <body>
 	<div id="container" class="dp-container">
 		<div class="dp-header">
-			<h1 class="dp-header__title">Dinner planner</h1>
+			<h1 class="dp-header__title">Dinner Planner</h1>
         </div>
-        
+
 		<div class="dp-content">
 			<div class="dp-myDinner">
                 <div class="dp-myDinner__top-bar">
                     <h3 class="dp-myDinner__guests" id="numberOfGuests"></h3>
                     <div class="dp-lg-only">
-                        <button class="btn dp-btn--primary dp-overview__back-btn">Go back and edit dinner</button>
+                        <a href="javascript:history.back()"><button class="btn dp-btn--primary dp-overview__back-btn">Go back and edit dinner</button></a>
                     </div>
                     <div class="dp-sm-only">
-                        <button class="btn dp-btn--primary dp-overview__back-btn">Back</button>
+                        <a href="javascript:history.back()"><button class="btn dp-btn--primary dp-overview__back-btn">Back</button></a>
                     </div>
                 </div>
 				<div class="dp-myDinner__line">
@@ -38,9 +38,9 @@
                     </div>
                     <div class="dp-myDinner__dinnerDetails">
                         <h3>Lasagne</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                     commodo consequat. </p>
                     </div>
                     <div class="dp-myDinner__dinnerDiscription">
@@ -57,17 +57,17 @@
                     </div>
                     <div class="dp-myDinner__dinnerDetails">
                         <h3>Lasagne</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                 commodo consequat. </p>
                         <!-- <div class="dp-myDinner__dishName">
                             <h3>Lasagne</h3>
                         </div>
                         <div class="dp-myDinner__dishDetails">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                 commodo consequat. </p>
                         </div> -->
                     </div>
