--- a/another.html
+++ b/another.html
@@ -57,17 +57,11 @@
 									Cost
 								</p>
 							</div>
-							<div class="dp-sidebar__dish">
-								<div class="dp-sidebar__dish-name">
-									Lasagne
-								</div>
-								<div class="dp-sidebar__dish-price">
-									77.20
-								</div>
-							</div>
-							<div class="dp-sidebar__total">
-								SEK 77.20
-							</div>
+
+							<div id="sidebarDishContainer"></div>
+
+							<div id="totalPrice" class="dp-sidebar__total"></div>
+
 							<div class="dp-sidebar__confirm">
 								<a href="/overview.html"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
 							</div>
