--- a/details.html
+++ b/details.html
@@ -56,9 +56,10 @@
 									Cost
 								</p>
 							</div>
-							<div class="dp-sidebar__total">
-								SEK 0.00
-							</div>
+							<div id="sidebarDishContainer"></div>
+
+							<div id="totalPrice" class="dp-sidebar__total"></div>
+
 							<div class="dp-sidebar__confirm">
 								<a href="/overview.html"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
 							</div>
