--- a/main.html
+++ b/main.html
@@ -56,9 +56,9 @@
 									Cost
 								</p>
 							</div>
-							<div class="dp-sidebar__total">
-								SEK 0.00
-							</div>
+							<div id="sidebarDishContainer"></div>
+
+							<div id="totalPrice" class="dp-sidebar__total"></div>
 							<div class="dp-sidebar__confirm">
 								<a href="/overview.html"><button id="confirmDinnerBtn" class="btn dp-btn--primary w-100">Confirm Dinner</button></a>
 							</div>
@@ -77,15 +77,14 @@
 							</div>
 							<div class="form-group">
 								<select class="form-control" id="dishTypeSelect">
-									<option>All</option>
-									<option>Main Course</option>
-									<option>Side Dish</option>
-									<option>Dessert</option>
-									<option>Appetizer</option>
+									<option value="">All</option>
+									<option value="starter">Starter</option>
+									<option value="main dish">Main Dish</option>
+									<option value="dessert">Dessert</option>
 								</select>
 							</div>
 							<div>
-								<button type="submit" class="btn dp-btn--primary">Search</button>
+								<button id="searchDishes" type="submit" class="btn dp-btn--primary">Search</button>
 							</div>
 						</form>
 					</div>
