Added first controllers and refactored views as pure js functions

--- a/index.html
+++ b/index.html
@@ -7,34 +7,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dinner Planner</title>
 
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+	 crossorigin="anonymous">
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<!-- Styles -->
 	<link rel="stylesheet" href="./styles/commons.css" />
 	<link rel="stylesheet" href="./styles/home.css" />
+	<link rel="stylesheet" href="./styles/main.css">
+	<link rel="stylesheet" href="./styles/sidebar.css">
+	<link rel="stylesheet" href="./styles/overview.css">
+	<link rel="stylesheet" href="./styles/details.css">
+	<link rel="stylesheet" href="./styles/myDinner.css">
 
 </head>
 
 <body class="dp-body">
-	<div id="container" class="dp-container">
-		<div class="dp-header">
-			<h1 class="dp-header__title">Dinner Planner</h1>
-		</div>
-
-		<div class="dp-content">
-			<div class="dp-home">
-				<div class="dp-home__body">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-					magna
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.
-				</div>
-				<div>
-					<a href="main.html"><button id="createNewDinner" class="btn dp-btn--primary">Create new dinner</button></a>
-				</div>
-			</div>
-		</div>
+	<div class="dp-header">
+		<h1 class="dp-header__title">Dinner Planner</h1>
 	</div>
+
+	<div id="container" class="dp-container"></div>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery.js"></script>
