Added a reusable DishView

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<!-- Styles -->
 	<link rel="stylesheet" href="./styles/commons.css" />
+	<link rel="stylesheet" href="./styles/dish.css">
 	<link rel="stylesheet" href="./styles/home.css" />
 	<link rel="stylesheet" href="./styles/main.css">
 	<link rel="stylesheet" href="./styles/sidebar.css">
